[gd_scene load_steps=3 format=3 uid="uid://b5lm0einbo3iu"]

[ext_resource type="Script" path="res://systems/upgrades/UpgradeUI.gd" id="1_8k9j3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.0613468, 0.0379443, 0.0200988, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0.8, 0.6, 0.3, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="UpgradeUI" type="Control" groups=["upgrade_ui"]]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8k9j3")

[node name="UpgradePanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.8, 0.4, 1)
theme_override_font_sizes/font_size = 32
text = "UPGRADES"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2

[node name="EssenceDisplay" type="HBoxContainer" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="EssenceIcon" type="Label" parent="UpgradePanel/VBoxContainer/EssenceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.4, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "ðŸ’Ž"

[node name="EssenceAmount" type="Label" parent="UpgradePanel/VBoxContainer/EssenceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 24
text = "0"

[node name="EssenceText" type="Label" parent="UpgradePanel/VBoxContainer/EssenceDisplay"]
layout_mode = 2
theme_override_colors/font_color = Color(0.7, 0.7, 0.7, 1)
theme_override_font_sizes/font_size = 16
text = " Shadow Essence"

[node name="HSeparator2" type="HSeparator" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2

[node name="UpgradeGrid" type="GridContainer" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/v_separation = 15

[node name="EssenceExtractionSection" type="VBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SectionTitle" type="Label" parent="UpgradePanel/VBoxContainer/UpgradeGrid/EssenceExtractionSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.9, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "ESSENCE EXTRACTION"
horizontal_alignment = 1

[node name="ButtonGrid" type="HBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid/EssenceExtractionSection"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="HealingSection" type="VBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SectionTitle" type="Label" parent="UpgradePanel/VBoxContainer/UpgradeGrid/HealingSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 16
text = "% HEALING ON ATTACK"
horizontal_alignment = 1

[node name="ButtonGrid" type="HBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid/HealingSection"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="AoESection" type="VBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SectionTitle" type="Label" parent="UpgradePanel/VBoxContainer/UpgradeGrid/AoESection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.8, 0.9, 1)
theme_override_font_sizes/font_size = 16
text = "RADIUS GROWTH FOR AoE"
horizontal_alignment = 1

[node name="ButtonGrid" type="HBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid/AoESection"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="HealthSection" type="VBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid"]
layout_mode = 2
size_flags_horizontal = 3

[node name="SectionTitle" type="Label" parent="UpgradePanel/VBoxContainer/UpgradeGrid/HealthSection"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.7, 0.3, 1)
theme_override_font_sizes/font_size = 16
text = "HEALTH AMOUNT"
horizontal_alignment = 1

[node name="ButtonGrid" type="HBoxContainer" parent="UpgradePanel/VBoxContainer/UpgradeGrid/HealthSection"]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="HSeparator3" type="HSeparator" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="UpgradePanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
theme_override_font_sizes/font_size = 18
text = "CLOSE"
